<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAmt" />

    <EditText
        android:id="@+id/etAmt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/etAmtHint" />

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNumPax" />

    <EditText
        android:id="@+id/etNum"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/etNumHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/tbSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/tbSVS"
            android:textOn="@string/tbSVS"/>

        <ToggleButton
            android:id="@+id/tbGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ToggleButton"
            android:textOff="@string/tbGST"
            android:textOn="@string/tbGST"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDis" />

    <EditText
        android:id="@+id/etDis"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/etDisHint"/>

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCash" />

        <RadioButton
            android:id="@+id/rbPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPayNow" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/btnSpl" />

        <Button
            android:id="@+id/btnRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRes" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTotalBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="" />

    <TextView
        android:id="@+id/tvEachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="" />

</LinearLayout>